Fix #27680 - [Feature] Filter question autocomplete based on survey list name

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -30,6 +30,7 @@
 					<field id="survey:slQuestion">
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="ds">becpg/autocomplete/survey</control-param>
+							<control-param name="urlParamsToPass">dataListsName</control-param>
 						</control>
 					</field>
 					<field id="survey:slChoices">
@@ -55,6 +56,7 @@
 					<field id="survey:slQuestion">
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="ds">becpg/autocomplete/survey</control-param>
+							<control-param name="urlParamsToPass">dataListsName</control-param>
 						</control>
 					</field>
 					<field id="survey:slChoices">
