Fix #27410 - [Feature] dutyFeeTaxAgencyCode

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-gs1-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-gs1-form-config.xml
@@ -276,6 +276,7 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -318,6 +319,7 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -341,6 +343,7 @@
 					<show id="gs1:dutyFeeTaxCode" />
 					<show id="gs1:dutyFeeTaxCountry" />
 					<show id="gs1:dutyFeeTaxRate" />
+					<show id="gs1:dutyFeeTaxAgencyCode" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
