Fix #5742 - [Feature] GS1 volume formulation

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -179,6 +179,7 @@
           <show force="false" id="gs1:width"/>
           <show force="false" id="gs1:depth"/>
           <show force="false" id="gs1:diameter"/>
+          <show force="false" id="gs1:volume"/>
           <show force="false" id="gs1:stackingFactor"/>
           <show force="false" id="gs1:stackingMaxWeight"/>
           <show force="false" id="pack:tare"/>
@@ -203,6 +204,7 @@
           <show force="false" id="gs1:secondaryWidth"/>
           <show force="false" id="gs1:secondaryDepth"/>
           <show force="false" id="gs1:secondaryDiameter"/>
+          <show force="false" id="gs1:secondaryVolume"/>
           <show force="false" id="gs1:secondaryNetWeight"/>
           <show force="false" id="gs1:secondaryWeight"/>
           <show force="false" id="gs1:secondaryDataCarrierTypeCode"/>
@@ -215,6 +217,7 @@
           <show force="false" id="pack:palletHeight"/>
           <show force="false" id="gs1:tertiaryWidth"/>
           <show force="false" id="gs1:tertiaryDepth"/>
+          <show force="false" id="gs1:tertiaryVolume"/>
           <show force="false" id="gs1:tertiaryDataCarrierTypeCode"/>
           <show force="false" id="pack:palletNumberOnGround"/>
           <show force="false" id="pack:palletStackingMaxWeight"/>
@@ -808,6 +811,11 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:volume" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
+            </control>
+          </field>
           <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -875,10 +883,14 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
-          
-           <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
+          <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:secondaryVolume" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           
@@ -921,6 +933,11 @@
           <field id="gs1:tertiaryDepth" mandatory="false" read-only="false" set="tertiaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:tertiaryVolume" mandatory="false" read-only="false" set="tertiaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           <field id="pack:palletNumberOnGround" mandatory="false" read-only="false" set="tertiaryPackaging"/>
@@ -2391,6 +2408,7 @@
           <show force="true" id="gs1:width"/>
           <show force="true" id="gs1:depth"/>
           <show force="true" id="gs1:diameter"/>
+          <show force="true" id="gs1:volume"/>
           <show force="true" id="gs1:stackingFactor"/>
           <show force="true" id="gs1:stackingMaxWeight"/>
           <show force="true" id="pack:tare"/>
@@ -2415,6 +2433,7 @@
           <show force="true" id="gs1:secondaryWidth"/>
           <show force="true" id="gs1:secondaryDepth"/>
           <show force="true" id="gs1:secondaryDiameter"/>
+          <show force="true" id="gs1:secondaryVolume"/>
           <show force="true" id="gs1:secondaryStackingFactor"/>
           <show force="true" id="gs1:secondaryStackingMaxWeight"/>
           <show force="true" id="gs1:secondaryNetWeight"/>
@@ -2429,6 +2448,7 @@
           <show force="true" id="pack:palletHeight"/>
           <show force="true" id="gs1:tertiaryWidth"/>
           <show force="true" id="gs1:tertiaryDepth"/>
+          <show force="true" id="gs1:tertiaryVolume"/>
           <show force="true" id="pack:palletNumberOnGround"/>
           <show force="true" id="pack:palletStackingMaxWeight"/>
           <show force="true" id="gs1:tertiaryNetWeight"/>
@@ -2894,6 +2914,11 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:volume" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
+            </control>
+          </field>
           <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -2966,6 +2991,11 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:secondaryVolume" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
+            </control>
+          </field>
           <field id="gs1:secondaryStackingFactor" mandatory="false" read-only="false" set="secondaryPackaging"/>
           <field id="gs1:secondaryStackingMaxWeight" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -3004,6 +3034,11 @@
           <field id="gs1:tertiaryDepth" mandatory="false" read-only="false" set="tertiaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:tertiaryVolume" mandatory="false" read-only="false" set="tertiaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           <field id="pack:palletNumberOnGround" mandatory="false" read-only="false" set="tertiaryPackaging"/>
@@ -3294,6 +3329,7 @@
           <show force="false" id="gs1:width"/>
           <show force="false" id="gs1:depth"/>
           <show force="false" id="gs1:diameter"/>
+          <show force="false" id="gs1:volume"/>
           <show force="false" id="gs1:stackingFactor"/>
           <show force="false" id="gs1:stackingMaxWeight"/>
           <show force="false" id="pack:tare"/>
@@ -3318,6 +3354,7 @@
           <show force="false" id="gs1:secondaryWidth"/>
           <show force="false" id="gs1:secondaryDepth"/>
           <show force="false" id="gs1:secondaryDiameter"/>
+          <show force="false" id="gs1:secondaryVolume"/>
           <show force="false" id="gs1:secondaryStackingFactor"/>
           <show force="false" id="gs1:secondaryStackingMaxWeight"/>
           <show force="false" id="gs1:secondaryNetWeight"/>
@@ -3332,6 +3369,7 @@
           <show force="false" id="pack:palletHeight"/>
           <show force="false" id="gs1:tertiaryWidth"/>
           <show force="false" id="gs1:tertiaryDepth"/>
+          <show force="false" id="gs1:tertiaryVolume"/>
           <show force="false" id="pack:palletNumberOnGround"/>
           <show force="false" id="pack:palletStackingMaxWeight"/>
           <show force="false" id="gs1:tertiaryNetWeight"/>
