--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-lu-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-lu-form-config.xml
@@ -130,6 +130,7 @@
           <show force="true" id="gs1:width"/>
           <show force="true" id="gs1:depth"/>
           <show force="true" id="gs1:diameter"/>
+          <show force="true" id="gs1:volume"/>
           <show force="true" id="gs1:stackingFactor"/>
           <show force="true" id="gs1:stackingMaxWeight"/>
           <show force="false" id="pack:tare"/>
@@ -153,6 +154,7 @@
           <show force="true" id="gs1:secondaryWidth"/>
           <show force="true" id="gs1:secondaryDepth"/>
           <show force="true" id="gs1:secondaryDiameter"/>
+          <show force="true" id="gs1:secondaryVolume"/>
           <show force="true" id="gs1:secondaryNetWeight"/>
           <show force="true" id="gs1:secondaryWeight"/>
           <show force="true" id="gs1:secondaryDataCarrierTypeCode"/>
@@ -165,6 +167,7 @@
           <show force="false" id="pack:palletHeight"/>
           <show force="true" id="gs1:tertiaryWidth"/>
           <show force="true" id="gs1:tertiaryDepth"/>
+          <show force="true" id="gs1:tertiaryVolume"/>
           <show force="true" id="gs1:tertiaryDataCarrierTypeCode"/>
           <show force="false" id="pack:palletNumberOnGround"/>
           <show force="false" id="pack:palletStackingMaxWeight"/>
@@ -550,6 +553,11 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:volume" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
+            </control>
+          </field>
           <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -616,10 +624,14 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
-          
-           <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
+          <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:secondaryVolume" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           
@@ -662,6 +674,11 @@
           <field id="gs1:tertiaryDepth" mandatory="false" read-only="false" set="tertiaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:tertiaryVolume" mandatory="false" read-only="false" set="tertiaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           <field id="pack:palletNumberOnGround" mandatory="false" read-only="false" set="tertiaryPackaging"/>
@@ -1522,6 +1539,7 @@
           <show force="true" id="gs1:width"/>
           <show force="true" id="gs1:depth"/>
           <show force="true" id="gs1:diameter"/>
+          <show force="true" id="gs1:volume"/>
           <show force="true" id="gs1:stackingFactor"/>
           <show force="true" id="gs1:stackingMaxWeight"/>
           <show force="false" id="pack:tare"/>
@@ -1545,6 +1563,7 @@
           <show force="true" id="gs1:secondaryWidth"/>
           <show force="true" id="gs1:secondaryDepth"/>
           <show force="true" id="gs1:secondaryDiameter"/>
+          <show force="true" id="gs1:secondaryVolume"/>
           <show force="true" id="gs1:secondaryNetWeight"/>
           <show force="true" id="gs1:secondaryWeight"/>
           <show force="true" id="gs1:secondaryDataCarrierTypeCode"/>
@@ -1557,6 +1576,7 @@
           <show force="false" id="pack:palletHeight"/>
           <show force="true" id="gs1:tertiaryWidth"/>
           <show force="true" id="gs1:tertiaryDepth"/>
+          <show force="true" id="gs1:tertiaryVolume"/>
           <show force="true" id="gs1:tertiaryDataCarrierTypeCode"/>
           <show force="false" id="pack:palletNumberOnGround"/>
           <show force="false" id="pack:palletStackingMaxWeight"/>
@@ -1929,6 +1949,11 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
+          <field id="gs1:volume" mandatory="false" read-only="false" set="primaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
+            </control>
+          </field>
           <field id="gs1:stackingFactor" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field id="gs1:stackingMaxWeight" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -1995,10 +2020,14 @@
               <control-param name="unit">mm</control-param>
             </control>
           </field>
-          
-           <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
+          <field id="gs1:secondaryDiameter" mandatory="false" read-only="false" set="secondaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:secondaryVolume" mandatory="false" read-only="false" set="secondaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           
@@ -2041,6 +2070,11 @@
           <field id="gs1:tertiaryDepth" mandatory="false" read-only="false" set="tertiaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
+            </control>
+          </field>
+          <field id="gs1:tertiaryVolume" mandatory="false" read-only="false" set="tertiaryPackaging">
+            <control template="/org/alfresco/components/form/controls/number-unit.ftl">
+              <control-param name="unit">L</control-param>
             </control>
           </field>
           <field id="pack:palletNumberOnGround" mandatory="false" read-only="false" set="tertiaryPackaging"/>
