--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -10142,6 +10142,7 @@
 			</form>
 			<form id="filter">
 				<field-visibility>
+					<show id="bcpg:filIngLevel" />
 					<show id="bcpg:filReqType" />
 					<show id="bcpg:filReqMessage" />
 					<show id="entity_bcpg:filIngs_bcpg:ing" />
@@ -10152,6 +10153,12 @@
 				</field-visibility>
 
 				<appearance>
+					<field id="bcpg:filIngLevel">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+							<control-param name="options">|data.level.all,1|1,2|2,3|3,4|4
+							</control-param>
+						</control>
+					</field>
 					<field id="bcpg:filReqType">
 						<control template="/org/alfresco/components/form/controls/selectmany.ftl">
 							<control-param name="isSearch">true</control-param>
